@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addons>
-<addon id="plugin.video.ex.ua.viewer" name="Ex.Ua Viewer" version="1.0.6" provider-name="vadim.skorba@gmail.com">
+<addon id="plugin.video.ex.ua.viewer" name="Ex.Ua Viewer" version="1.0.7" provider-name="vadim.skorba@gmail.com">
 <requires>
 <import addon="xbmc.python" version="1.0"/>
 </requires>
@@ -9,6 +9,7 @@
 </extension>
 <extension point="xbmc.addon.repository" name="Ex.Ua Viewer Repository">
 <info compressed="false">http://ex-ua-viewer.googlecode.com/hg/addons.xml</info>
+<checksum>http://ex-ua-viewer.googlecode.com/hg/addons.xml.checksum</checksum>
 <datadir zip="false">http://ex-ua-viewer.googlecode.com/hg/</datadir>
 </extension>
 <extension point="xbmc.addon.metadata">
